--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules
 /.pnp
 .pnp.js
 
+
 # testing
 /coverage
 
@@ -14,6 +15,7 @@ node_modules
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -22,3 +24,4 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+server/.env
