--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,14 @@ node_modules
 
 # misc
 .DS_Store
+/env
+/.env
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
+/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
